--- a/a.css
+++ b/a.css
@@ -5657,7 +5657,11 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     width: 304px;
     height: 264px;
     background: url("images/dots.png") right top; }
-
+    @media(max-width:500px){
+      .untree_co-hero .dots:before {
+        display: none;
+      }
+    }
 .untree_co-hero .excerpt {
   margin-bottom: 30px; }
 
